--- a/src/pages/RewindPages/Charts/Charts.scss
+++ b/src/pages/RewindPages/Charts/Charts.scss
@@ -28,5 +28,10 @@
         color: $secondary;
       }
     }
+    .charts-container {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+    }
   }
 }
